--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    
+    <link rel="icon" type="image/x-icon" href="/favicon-positive.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon-positive.svg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elo Orgânico</title>
   </head>
